--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,6 +1,6 @@
   - title: An offer
     category: category-1
-    class: a-third-offer
+    class: unique-offer-class
     location: Region, Country
     description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure architecto eum exercitationem neque.
     price: 999999
@@ -9,7 +9,7 @@
 
   - title: Another offer
     category: category-2
-    class: another-offer
+    class: unique-offer-class
     location: Region, Country
     description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure architecto eum exercitationem neque.
     price: 999999
@@ -18,7 +18,7 @@
 
   - title: A third offer
     category: category-3
-    class: a-third-offer
+    class: unique-offer-class
     location: Region, Country
     description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure architecto eum exercitationem neque.
     price: 999999
