--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   ],
   "devDependencies": {
     "jquery": "1.11.1",
-    "susy": "~2.2.6"
+    "susy": "~2.2.6",
+    "reset-css": "^2.2.0"
   }
 }
