--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,12 +1,12 @@
 - title: Once-in-a-lifetime South Africa & Victoria Falls holiday
   class: once-in-a-lifetime-south-africa-victoria-falls-holiday
-  category:
+  category: lifestyle
   location: Cape Town, Kruger & Zambia
   description: A 10-night South African adventure split between Cape Town, Kruger National Park and Zimbabwe, with open-vehicle safari and Victoria Falls tour included
   price: 2699
   was-price: 3499
   price-description: per person for 10 nights
-  link: https://www.secretescapes.com/once-in-a-lifetime-south-africa-and-victoria-falls-holiday-cape-town-kruger-and-zambia/sale
+  link: https://www.secretescapes.com/once-in-a-lifetime-south-africa-and-victoria-falls-holiday-cape-town-kruger-and-zambia/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
 
 - title: Santa Maria Beach House and Spa
   class: santa-maria-beach-house-and-spa
@@ -16,44 +16,44 @@
   price: 237
   was-price: 296
   price-description: per room per night
-  link: https://www.secretescapes.com/santa-maria-beach-house-and-spa-cape-town-south-africa/sale
+  link: https://www.secretescapes.com/santa-maria-beach-house-and-spa-cape-town-south-africa/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
 
 - title: Epic South Africa holiday with safari & cruise
   class: epic-south-africa-holiday-with-safari-cruise
-  category:
+  category: fashion-and-design
   location: Johannesburg & Durban, plus a safari & Indian Ocean cruise
   description: An incredible South African holiday, with five-star hotels, a safari stay and a return cruise between Durban and Mozambique - travel included
   price: 2399
   was-price: 2999
   price-description: per person for 14 nights
-  link: https://www.secretescapes.com/epic-south-africa-holiday-with-safari-and-cruise-johannesburg-and-durban-plus-a-safari-and-indian-ocean-cruise/sale
+  link: https://www.secretescapes.com/epic-south-africa-holiday-with-safari-and-cruise-johannesburg-and-durban-plus-a-safari-and-indian-ocean-cruise/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
 
 - title: South Africa food, culture & winelands experience
   class: south-africa-food-culture-winelands-experience
-  category:
+  category: food-and-wine
   location: Cape Town, Stellenbosch, the Garden Route & a game reserve
   description: A heavenly South African experience for food, wine and culture lovers, with a culinary musical show in Cape Town, eye-opening township tour, winelands sojourn and optional safari stay
   price: 2199
   was-price: 2999
   price-description: per person for 13 nights
-  link: https://www.secretescapes.com/south-africa-food-culture-and-winelands-experience-cape-town-stellenbosch-the-garden-route-and-a-game-reserve/sale
+  link: https://www.secretescapes.com/south-africa-food-culture-and-winelands-experience-cape-town-stellenbosch-the-garden-route-and-a-game-reserve/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
 
 - title: Cultural South Africa city & Winelands holiday
   class: cultural-south-africa-city-winelands-holiday
-  category:
+  category: music-and-arts
   location: Cape Town & Stellenbosch
   description: A stay near Cape Town's V&A Waterfront plus a sojourn in the Cape Winelands district, with a culinary musical show and tour of the capital's creative hubs - travel included
   price: 1949
   was-price: 2549
   price-description: per person for 6 nights
-  link: https://www.secretescapes.com/cultural-south-africa-city-and-winelands-holiday-cape-town-and-stellenbosch/sale
+  link: https://www.secretescapes.com/cultural-south-africa-city-and-winelands-holiday-cape-town-and-stellenbosch/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
 
 - title: Incredible city & safari South Africa holiday
   class: incredible-city-safari-south-africa-holiday
-  category:
+  category: adventure-and-nature
   location: Cape Town, Hazyview & Kruger National Park
   description: A nine-night adventure in South Africa, with Cape Town, country and safari stays, including tours, safaris and all travel
   price: 2699
   was-price: 3499
   price-description: per person for 9 nights
-  link: https://www.secretescapes.com/incredible-city-and-safari-south-africa-holiday-cape-town-hazyview-and-kruger-national-park/sale
+  link: https://www.secretescapes.com/incredible-city-and-safari-south-africa-holiday-cape-town-hazyview-and-kruger-national-park/sale?utm_source=SE&utm_campaign=SA_Stylist_20161025&utm_medium=hub
