hiding lifestyle page & multiple stylist offers

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,6 +1,6 @@
 - title: Once-in-a-lifetime South Africa & Victoria Falls holiday
   class: once-in-a-lifetime-south-africa-victoria-falls-holiday
-  category: lifestyle
+  category: adventure-and-nature
   location: Cape Town, Kruger & Zambia
   description: A 10-night South African adventure split between Cape Town, Kruger National Park and Zimbabwe, with open-vehicle safari and Victoria Falls tour included
   price: 2699
