--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -14,10 +14,10 @@
   price-description: per person for 11&nbsp;nights
   link: https://www.secretescapes.com/incredible-south-africa-city-beach-and-safari-holiday-cape-town-isandlwana-kwazulu-natal-and-durban/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
 
-- title: The Vuyani Safari Lodge
-  location: A private reserve on the edge of Kruger, South Africa
-  description: An all-inclusive stay at a luxurious safari lodge on a private game reserve, with two game drives per day
-  price: 348
-  was-price: 505
+- title: Welgelegen Manor
+  location: Balfour, near Johannesburg, South Africa
+  description: A romantic, early 20th-century manor in open nature-rich countryside outside Johannesburg, with traditional English interiors
+  price: 164
+  was-price: 213
   price-description: per suite per night
-  link: https://www.secretescapes.com/the-vuyani-safari-lodge-a-private-reserve-on-the-edge-of-kruger-south-africa/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
+  link: https://www.secretescapes.com/welgelegen-manor-balfour-near-johannesburg-south-africa/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
