--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -6,14 +6,6 @@
   price-description: per person for 7&nbsp;nights
   link: https://www.secretescapes.com/5-star-south-africa-safari-and-city-holiday-with-four-game-drives-sebatana-private-reserve-vaalwater/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
 
-- title: Incredible South Africa city, beach & safari holiday
-  location: Cape Town, Isandlwana, KwaZulu-Natal & Durban
-  description: An unforgettable adventure through scenic South Africa, with city, beach and safari stays and all travel
-  price: 1999
-  was-price: 2929
-  price-description: per person for 11&nbsp;nights
-  link: https://www.secretescapes.com/incredible-south-africa-city-beach-and-safari-holiday-cape-town-isandlwana-kwazulu-natal-and-durban/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
-
 - title: Welgelegen Manor
   location: Balfour, near Johannesburg, South Africa
   description: A romantic, early 20th-century manor in open nature-rich countryside outside Johannesburg, with traditional English interiors
@@ -21,3 +13,11 @@
   was-price: 213
   price-description: per suite per night
   link: https://www.secretescapes.com/welgelegen-manor-balfour-near-johannesburg-south-africa/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161202&utm_medium=hub
+
+- title: Unforgettable self-drive South Africa holiday with an optional safari
+  location: City, Winelands, Garden Route & beach
+  description: An incredible South Africa holiday taking in Cape Town, the winelands, the Garden Route and the Eastern Cape, with travel and car hire included
+  price: 1499
+  was-price: 2199
+  price-description: per person for 11&nbsp;nights
+  link: https://www.secretescapes.com/unforgettable-self-drive-south-africa-holiday-with-an-optional-safari-city-winelands-garden-route-and-beach/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161220&utm_medium=hub
