--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -13,3 +13,11 @@
   was-price: 2199
   price-description: per person for 11&nbsp;nights
   link: https://www.secretescapes.com/unforgettable-self-drive-south-africa-holiday-with-an-optional-safari-city-winelands-garden-route-and-beach/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161220&utm_medium=hub
+
+- title: Once-in-a-lifetime South Africa & Victoria Falls holiday
+  location: Cape Town, Kruger & Zambia
+  description: An unforgettable South African adventure, with an open-vehicle safari and Victoria Falls tour
+  price: 2199
+  was-price: 2999
+  price-description: per person for 10 nights
+  link: https://www.secretescapes.com/once-in-a-lifetime-south-africa-and-victoria-falls-holiday-cape-town-kruger-and-zambia-2/sale?gce_ean=1&utm_source=SE&utm_campaign=SouthAfrica_20161220&utm_medium=hub
