--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,19 @@
+- title: Breathtaking South Africa safari holiday with game drives
+  location: Vuyani Safari Lodge, Kruger
+  description: An all-inclusive stay at a luxurious safari lodge on a private game reserve, with two game drives per day and all travel
+  price: 1649
+  was-price: 2649
+  price-description: per person for 5 nights
+  link: https://www.secretescapes.com/breathtaking-south-africa-safari-holiday-with-game-drives-vuyani-safari-lodge-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170106&utm_medium=email
+
+- title: Spellbinding South Africa holiday with Kruger safari
+  location: Cape Town, Winelands & Kruger
+  description: A nine-night trip from the Western Cape all the way up to Kruger, including a sublime Stellenbosch stay and a full-board safari lodge stay with thrilling game drives
+  price: 1599
+  was-price: 2099
+  price-description: per person for 9 nights
+  link: https://www.secretescapes.com/spellbinding-south-africa-tour-with-kruger-safari-cape-town-winelands-and-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170106&utm_medium=email
+
 - title: Unforgettable self-drive South Africa holiday with an optional safari
   location: City, Winelands, Garden Route & beach
   description: An incredible South Africa holiday taking in Cape Town, the winelands, the Garden Route and the Eastern Cape, with travel and car hire included
