--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,11 @@
+- title: Guided trip in north-east South Africa with city, safari & beach
+  location: Johannesburg, Karongwe Reserve, Hazyview & Durban
+  description: A seven-night South Africa holiday, taking you from city to safari to beach, with some stunning scenic stops along the way - including all travel
+  price: 1499
+  was-price: 2142
+  price-description: per person for 8 nights
+  link: https://www.secretescapes.com/incredible-south-africa-city-safari-and-beach-break-johannesburg-karongwe-reserve-hazyview-and-durban/sale?utm_source=SE&utm_campaign=SouthAfrica_20170113&utm_medium=email
+  
 - title: Breathtaking South Africa safari holiday with game drives
   location: Vuyani Safari Lodge, Kruger
   description: An all-inclusive stay at a luxurious safari lodge on a private game reserve, with two game drives per day and all travel
