--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,19 @@
+- title: Incredible South Africa city, safari & culture holiday
+  location: Johannesburg, Kruger & Sun City
+  description: A tempting eight-night tour of north-east South Africa, with city, safari and a relaxing resort stay - including breakfast and all travel
+  price: 2599
+  was-price: 3499
+  price-description: per person for 8 nights
+  link: https://www.secretescapes.com/incredible-south-africa-city-and-safari-holiday-johannesburg-kruger-and-sun-city/sale?utm_source=SE&utm_campaign=SouthAfrica_20170123&utm_medium=email
+
+- title: Sensational self-drive South Africa holiday with optional safari
+  location: Cape Town, Winelands, Garden Route & a beach stay
+  description: A mind-blowing South Africa holiday taking in Cape Town, the winelands, the Garden Route and the Eastern Cape, with travel and car hire included
+  price: 1445
+  was-price: 2145
+  price-description: per person for 11 nights
+  link: https://www.secretescapes.com/sensational-self-drive-south-africa-holiday-with-optional-safari-cape-town-winelands-garden-route-and-a-beach-stay/sale?utm_source=SE&utm_campaign=SouthAfrica_20170123&utm_medium=email
+
 - title: Guided trip in north-east South Africa with city, safari & beach
   location: Johannesburg, Karongwe Reserve, Hazyview & Durban
   description: A seven-night South Africa holiday, taking you from city to safari to beach, with some stunning scenic stops along the way - including all travel
