add & remove offers

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,19 @@
+- title: Bucket-list-ticking South Africa & Mauritius holiday
+  location: With stays in Cape Town, Kruger National Park and dreamy Mauritius
+  description: Cape Town and a safari stay, before a luxury beach escape in Mauritius, with a choice of boards
+  price: 2999
+  was-price: 3799
+  price-description: per person for 14 nights
+  link: https://www.secretescapes.com/bucket-list-ticking-south-africa-and-mauritius-holiday-with-stays-in-cape-town-kruger-national-park-and-dreamy-mauritius/sale?utm_source=SE&utm_campaign=SouthAfrica_20170130&utm_medium=hub
+
+- title: Unforgettable South Africa twin-centre break with game drives
+  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
+  description: A spectacular Rainbow Nation holiday with a five-star stay, full board and game drives included
+  price: 900
+  was-price: 1664
+  price-description: per person for 6 nights
+  link: https://www.secretescapes.com/unforgettable-south-africa-adventure-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170130&utm_medium=hub
+
 - title: Incredible South Africa city, safari & culture holiday
   location: Johannesburg, Kruger & Sun City
   description: A tempting eight-night tour of north-east South Africa, with city, safari and a relaxing resort stay - including breakfast and all travel
@@ -5,14 +21,6 @@
   was-price: 3499
   price-description: per person for 8 nights
   link: https://www.secretescapes.com/incredible-south-africa-city-and-safari-holiday-johannesburg-kruger-and-sun-city/sale?utm_source=SE&utm_campaign=SouthAfrica_20170123&utm_medium=email
-
-- title: Sensational self-drive South Africa holiday with optional safari
-  location: Cape Town, Winelands, Garden Route & a beach stay
-  description: A mind-blowing South Africa holiday taking in Cape Town, the winelands, the Garden Route and the Eastern Cape, with travel and car hire included
-  price: 1445
-  was-price: 2145
-  price-description: per person for 11 nights
-  link: https://www.secretescapes.com/sensational-self-drive-south-africa-holiday-with-optional-safari-cape-town-winelands-garden-route-and-a-beach-stay/sale?utm_source=SE&utm_campaign=SouthAfrica_20170123&utm_medium=email
 
 - title: Breathtaking South Africa safari holiday with game drives
   location: Vuyani Safari Lodge, Kruger
