--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,11 @@
+- title: Spellbinding South Africa holiday with Kruger safari
+  location: Cape Town, Winelands & Kruger
+  description: The highlights of South Africa; Cape Town, the Cape Winelands and a luxury safari with all travel
+  price: 1599
+  was-price: 2099
+  price-description: per person for 9 nights
+  link: https://www.secretescapes.com/spellbinding-south-africa-tour-with-kruger-safari-cape-town-winelands-and-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170202&utm_medium=hub
+
 - title: Bucket-list-ticking South Africa & Mauritius holiday
   location: With stays in Cape Town, Kruger National Park and dreamy Mauritius
   description: Cape Town and a safari stay, before a luxury beach escape in Mauritius, with a choice of boards
