--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,27 @@
+- title: Mont Rochelle
+  location: Sir Richard Branson's retreat in Franschhoek, South Africa
+  description: One of the most sought-after stays in the Winelands – a 26-room retreat with jaw-dropping views
+  price: 237
+  was-price: 312
+  price-description: per room per night
+  link: https://www.secretescapes.com/mont-rochelle-sir-richard-bransons-retreat-in-franschhoek-south-africa/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
+
+- title: Bucket-list South Africa holiday with a Maldives beach stay
+  location: Cape Town, Pilanesberg National Park & Baa Atoll
+  description: A vibrant city sojourn, full-board safari stay and optional all-inclusive island bliss, with travel
+  price: 2999
+  was-price: 3489
+  price-description: per person for 14 nights
+  link: https://www.secretescapes.com/bucket-list-south-africa-holiday-with-maldives-beach-stay-cape-town-pilanesberg-national-park-and-baa-atoll/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
+
+- title: Unforgettable South Africa getaway with game drives
+  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
+  description: A spectacular Rainbow Nation holiday with two hotel stays, full board and game drives included
+  price: 900
+  was-price: 1664
+  price-description: per person for 6 nights
+  link: https://www.secretescapes.com/unforgettable-south-africa-getaway-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
+
 - title: Spellbinding South Africa holiday with Kruger safari
   location: Cape Town, Winelands & Kruger
   description: The highlights of South Africa; Cape Town, the Cape Winelands and a luxury safari with all travel
@@ -5,35 +29,3 @@
   was-price: 2099
   price-description: per person for 9 nights
   link: https://www.secretescapes.com/spellbinding-south-africa-tour-with-kruger-safari-cape-town-winelands-and-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170202&utm_medium=hub
-
-- title: Bucket-list-ticking South Africa & Mauritius holiday
-  location: With stays in Cape Town, Kruger National Park and dreamy Mauritius
-  description: Cape Town and a safari stay, before a luxury beach escape in Mauritius, with a choice of boards
-  price: 2999
-  was-price: 3799
-  price-description: per person for 14 nights
-  link: https://www.secretescapes.com/bucket-list-ticking-south-africa-and-mauritius-holiday-with-stays-in-cape-town-kruger-national-park-and-dreamy-mauritius/sale?utm_source=SE&utm_campaign=SouthAfrica_20170130&utm_medium=hub
-
-- title: Unforgettable South Africa twin-centre break with game drives
-  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
-  description: A spectacular Rainbow Nation holiday with a five-star stay, full board and game drives included
-  price: 900
-  was-price: 1664
-  price-description: per person for 6 nights
-  link: https://www.secretescapes.com/unforgettable-south-africa-adventure-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170130&utm_medium=hub
-
-- title: Incredible South Africa city, safari & culture holiday
-  location: Johannesburg, Kruger & Sun City
-  description: A tempting eight-night tour of north-east South Africa, with city, safari and a relaxing resort stay - including breakfast and all travel
-  price: 2599
-  was-price: 3499
-  price-description: per person for 8 nights
-  link: https://www.secretescapes.com/incredible-south-africa-city-and-safari-holiday-johannesburg-kruger-and-sun-city/sale?utm_source=SE&utm_campaign=SouthAfrica_20170123&utm_medium=email
-
-- title: Breathtaking South Africa safari holiday with game drives
-  location: Vuyani Safari Lodge, Kruger
-  description: An all-inclusive stay at a luxurious safari lodge on a private game reserve, with two game drives per day and all travel
-  price: 1649
-  was-price: 2649
-  price-description: per person for 5 nights
-  link: https://www.secretescapes.com/breathtaking-south-africa-safari-holiday-with-game-drives-vuyani-safari-lodge-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170106&utm_medium=email
