--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,26 +1,10 @@
-- title: Mont Rochelle
-  location: Sir Richard Branson's retreat in Franschhoek, South Africa
-  description: One of the most sought-after stays in the Winelands – a 26-room retreat with jaw-dropping views
-  price: 237
-  was-price: 312
-  price-description: per room per night
-  link: https://www.secretescapes.com/mont-rochelle-sir-richard-bransons-retreat-in-franschhoek-south-africa/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
-
-- title: Bucket-list South Africa holiday with a Maldives beach stay
-  location: Cape Town, Pilanesberg National Park & Baa Atoll
-  description: A vibrant city sojourn, full-board safari stay and optional all-inclusive island bliss, with travel
-  price: 2999
-  was-price: 3489
-  price-description: per person for 14 nights
-  link: https://www.secretescapes.com/bucket-list-south-africa-holiday-with-maldives-beach-stay-cape-town-pilanesberg-national-park-and-baa-atoll/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
-
-- title: Unforgettable South Africa getaway with game drives
-  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
-  description: A spectacular Rainbow Nation holiday with two hotel stays, full board and game drives included
+- title: Thrilling South Africa holiday with optional safari
+  location: Cape Town, Cederberg Mountains, Durban & Phinda Private Game Reserve
+  description: Captivating Cape Town, an ecological mountain retreat, Durban beach bliss and optional safari
   price: 900
-  was-price: 1664
-  price-description: per person for 6 nights
-  link: https://www.secretescapes.com/unforgettable-south-africa-getaway-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170208&utm_medium=hub
+  was-price: 2074
+  price-description: per person for 10 nights
+  link: https://www.secretescapes.com/thrilling-south-africa-holiday-with-optional-safari-with-luxury-hotels-in-cape-town-cederberg-mountains-durban-and-phinda-private-game-reserve/sale?utm_source=SE&utm_campaign=SouthAfrica_20170214&utm_medium=hub
 
 - title: Spellbinding South Africa holiday with Kruger safari
   location: Cape Town, Winelands & Kruger
