--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,8 +1,16 @@
+- title: Unforgettable South Africa getaway with game drives
+  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
+  description: A spectacular Rainbow Nation holiday with two hotel stays, full board and game drives included
+  price: 900
+  was-price: 1664
+  price-description: per person for 6 nights
+  link: https://www.secretescapes.com/unforgettable-south-africa-getaway-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170215&utm_medium=Email
+
 - title: Thrilling South Africa holiday with optional safari
   location: Cape Town, Cederberg Mountains, Durban & Phinda Private Game Reserve
   description: Captivating Cape Town, an ecological mountain retreat, Durban beach bliss and optional safari
   price: 900
-  was-price: 2074
+  was-price: 2799
   price-description: per person for 10 nights
   link: https://www.secretescapes.com/thrilling-south-africa-holiday-with-optional-safari-with-luxury-hotels-in-cape-town-cederberg-mountains-durban-and-phinda-private-game-reserve/sale?utm_source=SE&utm_campaign=SouthAfrica_20170214&utm_medium=hub
 
