--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,23 +1,7 @@
-- title: Unforgettable South Africa getaway with game drives
-  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
-  description: A spectacular Rainbow Nation holiday with two hotel stays, full board and game drives included
-  price: 900
-  was-price: 1664
-  price-description: per person for 6 nights
-  link: https://www.secretescapes.com/unforgettable-south-africa-getaway-with-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?utm_source=SE&utm_campaign=SouthAfrica_20170215&utm_medium=Email
-
-- title: Thrilling South Africa holiday with optional safari
-  location: Cape Town, Cederberg Mountains, Durban & Phinda Private Game Reserve
-  description: Captivating Cape Town, an ecological mountain retreat, Durban beach bliss and optional safari
-  price: 900
-  was-price: 2799
-  price-description: per person for 10 nights
-  link: https://www.secretescapes.com/thrilling-south-africa-holiday-with-optional-safari-with-luxury-hotels-in-cape-town-cederberg-mountains-durban-and-phinda-private-game-reserve/sale?utm_source=SE&utm_campaign=SouthAfrica_20170214&utm_medium=hub
-
-- title: Spellbinding South Africa holiday with Kruger safari
-  location: Cape Town, Winelands & Kruger
-  description: The highlights of South Africa; Cape Town, the Cape Winelands and a luxury safari with all travel
-  price: 1599
-  was-price: 2099
-  price-description: per person for 9 nights
-  link: https://www.secretescapes.com/spellbinding-south-africa-tour-with-kruger-safari-cape-town-winelands-and-kruger/sale?utm_source=SE&utm_campaign=SouthAfrica_20170202&utm_medium=hub
+- title: Incredible escorted South Africa city, beach & nature adventure
+  location: Johannesburg, Swaziland, Garden Route, Cape Town & more
+  description: A rich and diverse tour, with a safari, sightseeing activities, 11 amazing hotel stays, plus travel
+  price: 1799
+  was-price: 2570
+  price-description: per person for 14 nights
+  link: https://www.secretescapes.com/incredible-south-africa-city-beach-and-nature-adventure-johannesburg-mpumalanga-zululand-cape-town-and-more/sale?utm_source=SE&utm_campaign=SA_20170222&utm_medium=Hub
