--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,19 @@
+- title: Sensational South Africa safari holiday with diverse game drives
+  location: Sebatana Rhino Lodge, Vaalwater
+  description: A luxury safari escape with amazing value - including four unique game drives and more
+  price: 1219
+  was-price: 2019
+  price-description: per person for 7 nights
+  link: https://www.secretescapes.com/sensational-south-africa-safari-holiday-with-diverse-game-drives-sebatana-private-reserve-vaalwater/sale?utm_source=SE&utm_campaign=SA_20170227&utm_medium=Hub
+
+- title: Incredible South Africa trip with game drives & winelands stay
+  location: Cape Town, South Karoo & Stellenbosch
+  description: Eight unforgettable nights, with safari, a winelands stay and Table Mountain visit – includes travel
+  price: 1299
+  was-price: 1856
+  price-description: per person for 8 nights
+  link: https://www.secretescapes.com/incredible-south-africa-holiday-with-game-drives-and-winelands-stay-cape-town-south-karoo-and-stellenbosch/sale?utm_source=SE&utm_campaign=SA_20170227&utm_medium=Hub
+
 - title: Incredible escorted South Africa city, beach & nature adventure
   location: Johannesburg, Swaziland, Garden Route, Cape Town & more
   description: A rich and diverse tour, with a safari, sightseeing activities, 11 amazing hotel stays, plus travel
