--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,11 @@
+- title: Incredible South Africa wildlife adventure
+  location: Johannesburg, Kruger, a luxury game reserve & optional Cape Town stay
+  description: Epic city and wildlife South Africa holiday with optional Cape Town stay, game drives and travel
+  price: 2199
+  was-price: 2999
+  price-description: per person for 7 nights
+  link: https://www.secretescapes.com/incredible-south-africa-wildlife-adventure-johannesburg-kruger-nkmoazi-and-optional-cape-town-stay/sale?gce_abr=2&utm_source=SE&utm_campaign=20_SouthAfrica_20170307&utm_medium=hub
+
 - title: Sensational South Africa safari holiday with diverse game drives
   location: Sebatana Rhino Lodge, Vaalwater
   description: A luxury safari escape with amazing value - including four unique game drives and more
