--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,23 +1,15 @@
-- title: Incredible South Africa wildlife adventure
-  location: Johannesburg, Kruger, a luxury game reserve & optional Cape Town stay
-  description: Epic city and wildlife South Africa holiday with optional Cape Town stay, game drives and travel
-  price: 2199
-  was-price: 2999
-  price-description: per person for 7 nights
-  link: https://www.secretescapes.com/incredible-south-africa-wildlife-adventure-johannesburg-kruger-nkmoazi-and-optional-cape-town-stay/sale?gce_abr=2&utm_source=SE&utm_campaign=20_SouthAfrica_20170307&utm_medium=hub
+- title: Kruger National Park adventure at a tented safari camp
+  location: Nkambeni, South Africa
+  description: A simple safari adventure in South Africa's Kruger National Park - with all meals and all travel
+  price: 1199
+  was-price: 1799
+  price-description: per person for 6 nights
+  link: https://www.secretescapes.com/kruger-national-park-adventure-at-a-tented-safari-camp-nkambeni-south-africa/sale?gce_urg=0&utm_source=SE&utm_campaign=SouthAfrica_201703&utm_medium=Hub
 
-- title: Sensational South Africa safari holiday with diverse game drives
-  location: Sebatana Rhino Lodge, Vaalwater
-  description: A luxury safari escape with amazing value - including four unique game drives and more
-  price: 1219
-  was-price: 2019
-  price-description: per person for 7 nights
-  link: https://www.secretescapes.com/sensational-south-africa-safari-holiday-with-diverse-game-drives-sebatana-private-reserve-vaalwater/sale?utm_source=SE&utm_campaign=SA_20170227&utm_medium=Hub
-
-- title: Incredible South Africa trip with game drives & winelands stay
-  location: Cape Town, South Karoo & Stellenbosch
-  description: Eight unforgettable nights, with safari, a winelands stay and Table Mountain visit – includes travel
-  price: 1299
-  was-price: 1856
-  price-description: per person for 8 nights
-  link: https://www.secretescapes.com/incredible-south-africa-holiday-with-game-drives-and-winelands-stay-cape-town-south-karoo-and-stellenbosch/sale?utm_source=SE&utm_campaign=SA_20170227&utm_medium=Hub
+- title: Unique South Africa holiday with two luxury stays & game drives
+  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
+  description: A spectacular South Africa holiday with two hotel stays, full board and game drives included
+  price: 1369
+  was-price: 1969
+  price-description: per person for 6 nights
+  link: https://www.secretescapes.com/unique-south-africa-holiday-with-two-luxury-stays-and-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?gce_urg=0&utm_source=SE&utm_campaign=South%20Africa_201703&utm_medium=Hub
