--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,15 +1,15 @@
-- title: Kruger National Park adventure at a tented safari camp
-  location: Nkambeni, South Africa
-  description: A simple safari adventure in South Africa's Kruger National Park - with all meals and all travel
-  price: 1199
-  was-price: 1799
-  price-description: per person for 6 nights
-  link: https://www.secretescapes.com/kruger-national-park-adventure-at-a-tented-safari-camp-nkambeni-south-africa/sale?gce_urg=0&utm_source=SE&utm_campaign=SouthAfrica_201703&utm_medium=Hub
+- title: Wildside Safari Camp
+  location: Entabeni Safari Conservancy, Limpopo
+  description: A full-board, authentic camp stay with daily game drives in the wildlife-rich Entabeni reserve
+  price: 173
+  was-price: 229
+  price-description: per room per night
+  link: https://www.secretescapes.com/wildside-safari-camp-entabeni-safari-conservancy-limpopo-south-africa/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
 
 - title: Unique South Africa holiday with two luxury stays & game drives
   location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
   description: A spectacular South Africa holiday with two hotel stays, full board and game drives included
-  price: 1369
-  was-price: 1969
+  price: 1439
+  was-price: 2039
   price-description: per person for 6 nights
   link: https://www.secretescapes.com/unique-south-africa-holiday-with-two-luxury-stays-and-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?gce_urg=0&utm_source=SE&utm_campaign=South%20Africa_201703&utm_medium=Hub
