--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,11 @@
+- title: Incredible South Africa & Mozambique adventure
+  location: Johannesburg, Kruger National Park, Swaziland & many more
+  description: Fifteen nights taking in scenic safaris, cities and more, with restful beach stays and travel
+  price: 2799
+  was-price: 3599
+  price-description: per person for 15 nights
+  link: https://www.secretescapes.com/incredible-south-africa-and-mozambique-adventure-johannesburg-kruger-national-park-swaziland-and-many-more/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
+
 - title: Wildside Safari Camp
   location: Entabeni Safari Conservancy, Limpopo
   description: A full-board, authentic camp stay with daily game drives in the wildlife-rich Entabeni reserve
