--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,3 +1,19 @@
+- title: Breathtaking South Africa safari holiday
+  location: Vuyani Safari Lodge, Kruger
+  description: Daily safaris and a choice of outstanding suites on an all-inclusive private game reserve
+  price: 1649
+  was-price: 2649
+  price-description: per person for 4 nights
+  link: https://www.secretescapes.com/breathtaking-south-africa-safari-holiday-vuyani-safari-lodge-kruger/sale?utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
+
+- title: Captivating South Africa & Mauritius holiday with a safari
+  location: Cape Town, Kruger National Park, Johannesburg & Indian Ocean
+  description: Memorable South Africa and Mauritius escape, with game drives and an all-inclusive beach stay
+  price: 2899
+  was-price: 3889
+  price-description: per person for 12 nights
+  link: https://www.secretescapes.com/captivating-south-africa-and-mauritius-holiday-with-a-safari-cape-town-kruger-national-park-johannesburg-and-indian-ocean/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
+
 - title: Incredible South Africa & Mozambique adventure
   location: Johannesburg, Kruger National Park, Swaziland & many more
   description: Fifteen nights taking in scenic safaris, cities and more, with restful beach stays and travel
