--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "jquery": "1.11.1",
     "susy": "~2.2.6",
-    "reset-css": "^2.2.0",
-    "unslider": "^2.0.3"
+    "reset-css": "^2.2.0"
   }
 }
