--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.5.1",
-    "imagemin-pngquant": "^4.2.0"
+    "imagemin-pngquant": "^4.2.0",
+    "jquery-countdown": "^2.2.0"
   }
 }
