--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,39 +1,20 @@
-- title: Breathtaking South Africa safari holiday
-  location: Vuyani Safari Lodge, Kruger
-  description: Daily safaris and a choice of outstanding suites on an all-inclusive private game reserve
-  price: 1649
-  was-price: 2649
-  price-description: per person for 4 nights
-  link: https://www.secretescapes.com/breathtaking-south-africa-safari-holiday-vuyani-safari-lodge-kruger/sale?utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
 
-- title: Captivating South Africa & Mauritius holiday with a safari
-  location: Cape Town, Kruger National Park, Johannesburg & Indian Ocean
-  description: Memorable South Africa and Mauritius escape, with game drives and an all-inclusive beach stay
-  price: 2899
-  was-price: 3889
-  price-description: per person for 12 nights
-  link: https://www.secretescapes.com/captivating-south-africa-and-mauritius-holiday-with-a-safari-cape-town-kruger-national-park-johannesburg-and-indian-ocean/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
 
-- title: Incredible South Africa & Mozambique adventure
-  location: Johannesburg, Kruger National Park, Swaziland & many more
-  description: Fifteen nights taking in scenic safaris, cities and more, with restful beach stays and travel
-  price: 2799
-  was-price: 3599
-  price-description: per person for 15 nights
-  link: https://www.secretescapes.com/incredible-south-africa-and-mozambique-adventure-johannesburg-kruger-national-park-swaziland-and-many-more/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
 
-- title: Wildside Safari Camp
-  location: Entabeni Safari Conservancy, Limpopo
-  description: A full-board, authentic camp stay with daily game drives in the wildlife-rich Entabeni reserve
-  price: 173
-  was-price: 229
-  price-description: per room per night
-  link: https://www.secretescapes.com/wildside-safari-camp-entabeni-safari-conservancy-limpopo-south-africa/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=SouthAfrica_201703
+- title: Awe-inspiring South African road trip
+  location: Cape Town, Winelands & the Garden Route with optional game lodge
+  description: An incredible South Africa road trip along the Garden Route
+  price: 1299
+  was-price: 1799
+  price-description: per person for 10 nights
+  link: https://www.secretescapes.com/splendours-of-the-garden-route-south-africa-cape-town-south-africa/sale?utm_source=SE_MEDIA&utm_medium=hub&utm_campaign=SouthAfrica_Feb2018
 
-- title: Unique South Africa holiday with two luxury stays & game drives
-  location: Welgelegen Manor & Badgerleur Bush Lodge, near Johannesburg
-  description: A spectacular South Africa holiday with two hotel stays, full board and game drives included
-  price: 1439
-  was-price: 2039
-  price-description: per person for 6 nights
-  link: https://www.secretescapes.com/unique-south-africa-holiday-with-two-luxury-stays-and-game-drives-welgelegen-manor-and-badgerleur-bush-lodge-near-johannesburg/sale?gce_urg=0&utm_source=SE&utm_campaign=South%20Africa_201703&utm_medium=Hub
+
+
+- title: Incredible tour of Namibia's natural wonders
+  location: Windhoek, Swakopmund, Damaraland & Etosha National Park
+  description: Combine Namibia's best city, coast and safari experiences
+  price: 2399
+  was-price: 3299
+  price-description: per person for 8 nights
+  link: https://www.secretescapes.com/tour-of-namibias-natural-wonders-city-stays-desert-adventures-scenic-safaris-and-more/sale?utm_source=SE_MEDIA&utm_medium=hub&utm_campaign=SouthAfrica_Feb2018
